k8s/base/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:25.0.0
        args: ["start-dev","--import-realm"]
        resources:
          requests:
            memory: "512Mi"  # Tăng từ 400Mi
            cpu: "150m"
          limits:
            memory: "1Gi"    # Tăng từ 800Mi
            cpu: "400m"
        ports:
        - containerPort: 8080
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 10
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 300 
          periodSeconds: 20
          timeoutSeconds: 10
          failureThreshold: 5
        volumeMounts:
        - name: realm-config
          mountPath: /opt/keycloak/data/import
      volumes:
      - name: realm-config
        configMap:
          name: keycloak-realm-config
      - name: keycloak-data
        emptyDir: {}
