k8s/base/order-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
      - name: order-service
        image: minq3010/order-service:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "200Mi"
            cpu: "80m"
          limits:
            memory: "320Mi"
            cpu: "200m"
        ports:
        - containerPort: 8007
          name: http
        - containerPort: 50053
          name: grpc
