k8s/base/api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  ports:
  - port: 8888
    targetPort: 8888
  selector:
    app: api-gateway
  type: ClusterIP
