k8s/base/cart-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart-service
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  ports:
  - port: 8005
    targetPort: 8005
    name: http
  - port: 50052
    targetPort: 50052
    name: grpc
  selector:
    app: cart-service
  type: ClusterIP
