k8s/base/discovery-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: discovery-server
spec:
  ports:
  - port: 8761
    targetPort: 8761
  selector:
    app: discovery-server
  type: ClusterIP
