k8s/base/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
spec:
  ports:
  - port: 9092
    targetPort: 9092
    name: external
  - port: 29092
    targetPort: 29092
    name: internal
  selector:
    app: kafka
  type: ClusterIP
