k8s/base/keycloak-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-mysql
spec:
  selector:
    app: keycloak-mysql
  ports:
  - port: 3306
    targetPort: 3306
  type: ClusterIP
