k8s/base/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: keycloak
  type: ClusterIP
