k8s/base/payment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  type: NodePort
  ports:
  - port: 8006
    targetPort: 8006
    nodePort: 30006
  selector:
    app: payment-service
