k8s/base/product-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  ports:
  - port: 8004
    targetPort: 8004
  selector:
    app: product-service
  type: ClusterIP
