k8s/base/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  ports:
  - port: 9004
    targetPort: 9004
  selector:
    app: user-service
  type: ClusterIP
